# romhoard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  package.json  pyproject.toml  pyrightconfig.json  tailwind.config.js
.github/workflows/: docker-publish.yml
devices/: admin.py  apps.py  models.py  preset_loader.py  serializers.py  urls.py  views.py
devices/device_presets/: amberelec.json  arkos.json  batocera.json  emuelec.json  garlicos.json  knulli.json  minui.json  muos.json  onionos.json  recalbox.json  rocknix.json  spruceos.json  stockos.json
devices/migrations/: 0001_initial.py
devices/tests/: test_models.py  test_presets.py  test_views.py
docker/: docker-entrypoint.sh  supervisord.conf
documentation/: docker.md
romcollections/: admin.py  apps.py  cover_utils.py  models.py  search.py  serializers.py  signals.py  tasks.py  urls.py  views.py
romcollections/migrations/: 0001_initial.py  0002_collection_romcollecti_is_publ_dcd6a8_idx_and_more.py  0003_create_favorites.py  0004_creator_slug_unique_together.py  0005_slugify_creators.py  0006_add_source_url_fields.py
romhoard/: asgi.py  context_processors.py  settings.py  url_fetch.py  urls.py  wsgi.py
static/css/: retro.css
templates/: 404.html  base.html
tests/: conftest.py  test_archive.py  test_collection_sync.py  test_genre_normalization.py  test_hub_upload_cover.py  test_image_utils.py  test_lookup_screenscraper.py  test_parser.py  test_romset_scoring.py  test_scan_path_delete.py  test_scanner.py  test_upload.py  test_url_fetch.py
(+54 files in other folders)
